--- a/404-not-found-master/index.html
+++ b/404-not-found-master/index.html
@@ -1,95 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-
-    <link rel="icon" href="devchallenges.png" />
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>404 Not Found</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@500&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
-    <title>Devchallenges</title>
-
     <style>
-      body {
-        font-family: "Poppins", sans-serif;
+      * {
+        margin: 0;
+        padding: 0;
+        font-family: "Inconsolata", monospace;
+        font-family: "Montserrat", sans-serif;
+        font-family: "Space Mono", monospace;
       }
-
-      ul {
-        padding-left: 24px;
+      .heading {
+        color: #333;
+        font-family: Inconsolata;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: -1.92px;
+        text-transform: uppercase;
+        margin-top: 44px;
+        margin-left: 77px;
       }
-
-      li {
-        margin-bottom: 8px;
+      .title {
+        color: var(--gray-1, #333);
+        font-family: Space Mono;
+        font-size: 64px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: -2.24px;
+        margin-top: 200px;
       }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
+      .description {
+        color: var(--gray-2, #4f4f4f);
+        font-family: Space Mono;
+        font-size: 24px;
+        font-style: normal;
         font-weight: 400;
+        line-height: normal;
+        letter-spacing: -0.84px;
+        margin-top: 36px;
+        max-width: 381px;
       }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
+      main {
+        height: 100vh;
+        width: 100vw;
       }
-
-      .welcome-text a {
-        color: #f7542e;
+      .main {
+        display: flex;
+        justify-content: space-around;
+      }
+      img {
+        width: 539.22px;
+        margin-left: 77px;
+        margin-top: 200px;
+      }
+      .btn {
+        width: 216px;
+        height: 68px;
+        /* flex-shrink: 0; */
+        background: #333;
+        padding: 24px auto;
+        color: #fff;
+        font-family: Space Mono;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        /* letter-spacing: -0.49px; */
+        text-transform: uppercase;
+        margin-top: 64px;
+      }
+      .foot {
+        color: #bdbdbd;
+        text-align: center;
+        font-family: Montserrat;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        margin-bottom: 24px;
+        margin-top: 308px;
+      }
+      @media screen and (max-width: 576px) {
+        .main {
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: center;
+        }
+        img {
+          width: 286.83px;
+          margin-left: 44px;
+          margin-top: 83.91px;
+        }
+        .heading {
+          margin-top: 20px;
+          margin-left: 24px;
+        }
+        br {
+          display: none;
+        }
+        .title {
+          width: 350px;
+          font-size: 48px;
+          margin-left: 24px;
+          margin-right: 1px;
+        }
+        .description {
+          margin-top: 30px;
+          font-size: 18px;
+          letter-spacing: -0.63px;
+          width: 328px;
+          height: 81px;
+          margin-left: 23px;
+          margin-right: 24px;
+        }
+        .btn {
+          margin-top: 66px;
+          margin-left: 24px;
+          margin-right: 135px;
+        }
+        .foot {
+          margin-top: 114px;
+          margin-left: 46px;
+          margin-right: 42px;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <header></header>
+    <main>
+      <p class="heading">404 not found</p>
+      <div class="main">
+        <div class="pic-container">
+          <img src="./Scarecrow.png" alt="" />
+        </div>
+        <div class="text-container">
+          <h1 class="title">I have bad news <br />for you</h1>
+          <p class="description">
+            The page you are looking for might be removed or is temporarily
+            unavailable
+          </p>
+          <button class="btn">Back to homepage</button>
+        </div>
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+      <p class="foot">created by username - devChallenges.io</p>
+    </main>
+    <footer></footer>
   </body>
 </html>
