made responsive for tablet

--- a/index.html
+++ b/index.html
@@ -135,6 +135,50 @@
           margin-right: 42px;
         }
       }
+      @media screen and (min-width: 576px) and (max-width: 992px) {
+        .main {
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: center;
+        }
+        img {
+          width: 286.83px;
+          margin-left: 44px;
+          margin-top: 83.91px;
+        }
+        .heading {
+          margin-top: 20px;
+          margin-left: 24px;
+        }
+        br {
+          display: none;
+        }
+        .title {
+          width: 350px;
+          font-size: 48px;
+          margin-left: 24px;
+          margin-right: 1px;
+        }
+        .description {
+          margin-top: 30px;
+          font-size: 18px;
+          letter-spacing: -0.63px;
+          width: 328px;
+          height: 81px;
+          margin-left: 23px;
+          margin-right: 24px;
+        }
+        .btn {
+          margin-top: 66px;
+          margin-left: 24px;
+          margin-right: 135px;
+        }
+        .foot {
+          margin-top: 114px;
+          margin-left: 46px;
+          margin-right: 42px;
+        }
+      }
     </style>
   </head>
   <body>
